--- a/S04.03-Exercise-AddMapAndSharing/app/src/main/res/values/strings.xml
+++ b/S04.03-Exercise-AddMapAndSharing/app/src/main/res/values/strings.xml
@@ -23,9 +23,11 @@
     <!--It's good to keep this short, so your launcher icon isn't displayed with "The greatest Wea"-->
     <!--or something similar.-->
     <string name="app_name">Sunshine</string>
+    <string name="action_map">Map Location</string>
 
     <!--Used in overflow menu to refresh weather data-->
     <string name="action_refresh">Refresh</string>
+    <string name="action_share">Share</string>
 
     <string name="error_message">
         An error has occurred. Please try again by clicking REFRESH
