--- a/S06.02-Exercise-SettingsFragment/app/src/main/res/values/strings.xml
+++ b/S06.02-Exercise-SettingsFragment/app/src/main/res/values/strings.xml
@@ -171,6 +171,8 @@
 
     <string name="condition_unknown">Unknown (<xliff:g id="conditionId">%1$d</xliff:g>)</string>
 
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
     <!-- - - - - - - - - - - -->
     <!-- Used by NetworkUtils-->
